// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`External links <GoTerms /> should render GOTerms component with empty subset 1`] = `
<section>
  <div
    className="row"
  >
    <div
      className="large-12 columns"
    >
      <h4>
        Go terms
      </h4>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="small-12 medium-4 columns margin-bottom-large"
    >
      <p
        className="go-title-bp"
      >
        Biological Process
      </p>
      <ul
        className="go-list"
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </ul>
    </div>
    <div
      className="small-12 medium-4 columns margin-bottom-large"
    >
      <p
        className="go-title-mf"
      >
        Molecular Function
      </p>
      <ul
        className="go-list"
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </ul>
    </div>
    <div
      className="small-12 medium-4 columns margin-bottom-large"
    >
      <p
        className="go-title-cc"
      >
        Cellular Component
      </p>
      <ul
        className="go-list"
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`External links <GoTerms /> should render GoTerms component 1`] = `
<section>
  <div
    className="row"
  >
    <div
      className="large-12 columns"
    >
      <h4>
        Go terms
      </h4>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="small-12 medium-4 columns margin-bottom-large"
    >
      <p
        className="go-title-bp"
      >
        Biological Process
      </p>
      <ul
        className="go-list"
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </ul>
    </div>
    <div
      className="small-12 medium-4 columns margin-bottom-large"
    >
      <p
        className="go-title-mf"
      >
        Molecular Function
      </p>
      <ul
        className="go-list"
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </ul>
    </div>
    <div
      className="small-12 medium-4 columns margin-bottom-large"
    >
      <p
        className="go-title-cc"
      >
        Cellular Component
      </p>
      <ul
        className="go-list"
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </ul>
    </div>
    <div
      className="small-12 medium-4 columns margin-bottom-large"
    >
      <p
        className=""
      >
        biological_process
      </p>
      <ul
        className="go-list"
      >
        <li>
          <GoLink
            className="go-terms"
            id="GO:0004930"
            title="test1 (GO:0004930)"
          >
            test1
          </GoLink>
        </li>
        <li>
          <GoLink
            className="go-terms"
            id="GO:0007186"
            title="test2 (GO:0007186)"
          >
            test2
          </GoLink>
        </li>
        <li>
          <GoLink
            className="go-terms"
            id="GO:0016021"
            title="test3 (GO:0016021)"
          >
            test3
          </GoLink>
        </li>
      </ul>
    </div>
  </div>
</section>
`;
